--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon -e js handlebars html css ."
+    "dev": "nodemon -e js,handlebars,html,css ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "mongoose-paginate-v2": "^1.7.4",
     "socket.io": "^4.7.2"
